add new paragraph index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <p>Hello from vs code !!</p>
+    <p>Hello from vs code !!!!</p>
+    <p>git is kinda cool !!!!</p>
 </body>
 
 </html>
