--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello from vs code </title>
-    <link rel="stylesheet" href="./styles.css" />
+
 </head>
 
 <body>
-    <p>Hello from vs code !!!!</p>
-    <p>git is kinda cool !!!!</p>
+    <p>Hello from vs code !</p>
+    <p>git is kinda cool !</p>
+    <br>
 </body>
 
 </html>
